melhorado experiencia do usuário
